syntax = "proto3";

option csharp_namespace = "GRpc.UserAvatar";

message UserAvatarLinkRequest {
  string AvatarId = 1;
}

message UserAvatarLinkResponse {
  string Link = 1; 
}

message UserAvatarUploadLinkRequest {
    string AvatarId = 1;
    string ContentType = 2;
}

message UserAvatarUploadLinkResponse {
  string UploadLink = 1;
  map<string,string> FormData = 2;
}

service UserAvatarService {
  rpc GetUserAvatarLink (UserAvatarLinkRequest) returns (UserAvatarLinkResponse);
  rpc GetUserAvatarUploadLink (UserAvatarUploadLinkRequest) returns (UserAvatarUploadLinkResponse);
}
